Hembrain-Glasgow tests DONE

--- a/arachne/OL-Glasgow.ipynb
+++ b/arachne/OL-Glasgow.ipynb
@@ -2,24 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -103,17 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
     "ak.connect(\"n81\", 5555)"
@@ -121,18 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_410563/2510305971.py:2: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"/scratch/users/oaa9/arkouda-njit/arachne/data/OL_dataset.csv\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read in the dataset with pandas.\n",
     "df = pd.read_csv(\"/scratch/users/oaa9/arkouda-njit/arachne/data/OL_dataset.csv\")\n",
@@ -151,126 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>src</th>\n",
-       "      <th>dst</th>\n",
-       "      <th>connection_type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>328535863013441</td>\n",
-       "      <td>285718156140881</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>328535863013441</td>\n",
-       "      <td>361349432766191</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>340540827557177</td>\n",
-       "      <td>328535863013441</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>340540827557177</td>\n",
-       "      <td>357747943403111</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>354946785009842</td>\n",
-       "      <td>340540827557177</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187303</th>\n",
-       "      <td>914176572848441</td>\n",
-       "      <td>59545684001365</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187304</th>\n",
-       "      <td>914176572848441</td>\n",
-       "      <td>59545684001365</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187305</th>\n",
-       "      <td>1123552497597685</td>\n",
-       "      <td>174465061404730</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187306</th>\n",
-       "      <td>1094800169903761</td>\n",
-       "      <td>167069259889183</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187307</th>\n",
-       "      <td>1220130829083966</td>\n",
-       "      <td>197600645634932</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div><p>1187308 rows x 3 columns</p>"
-      ],
-      "text/plain": [
-       "                      src              dst  connection_type\n",
-       "0         328535863013441  285718156140881                0\n",
-       "1         328535863013441  361349432766191                0\n",
-       "2         340540827557177  328535863013441                0\n",
-       "3         340540827557177  357747943403111                0\n",
-       "4         354946785009842  340540827557177                0\n",
-       "...                   ...              ...              ...\n",
-       "1187303   914176572848441   59545684001365                1\n",
-       "1187304   914176572848441   59545684001365                1\n",
-       "1187305  1123552497597685  174465061404730                1\n",
-       "1187306  1094800169903761  167069259889183                1\n",
-       "1187307  1220130829083966  197600645634932                1 (1187308 rows x 3 columns)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Keep only the edge information and \"connection_type\" attribute.\n",
     "reduced_dataset = transformed_dataset[\"src\", \"dst\", \"connection_type\"]\n",
@@ -279,17 +130,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph has 667_711 vertices and 962_796 edges.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create property graph.\n",
     "graph = ar.PropGraph()\n",
@@ -351,126 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>src</th>\n",
-       "      <th>dst</th>\n",
-       "      <th>connection_type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4721570023</td>\n",
-       "      <td>29419008432</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4721570023</td>\n",
-       "      <td>34564308247</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4721570023</td>\n",
-       "      <td>62325779916524</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4721570023</td>\n",
-       "      <td>99268253475632</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4721570023</td>\n",
-       "      <td>308599174432198</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>962791</th>\n",
-       "      <td>190809470566326468</td>\n",
-       "      <td>190530533012998853</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>962792</th>\n",
-       "      <td>190931327244912976</td>\n",
-       "      <td>190809470566326468</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>962793</th>\n",
-       "      <td>190931327244912976</td>\n",
-       "      <td>190849454788987746</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>962794</th>\n",
-       "      <td>191018911732647150</td>\n",
-       "      <td>189211053665176899</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>962795</th>\n",
-       "      <td>191018911732647150</td>\n",
-       "      <td>189538543488878795</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div><p>962796 rows x 3 columns</p>"
-      ],
-      "text/plain": [
-       "                       src                 dst  connection_type\n",
-       "0               4721570023         29419008432                0\n",
-       "1               4721570023         34564308247                0\n",
-       "2               4721570023      62325779916524                1\n",
-       "3               4721570023      99268253475632                1\n",
-       "4               4721570023     308599174432198                1\n",
-       "...                    ...                 ...              ...\n",
-       "962791  190809470566326468  190530533012998853                0\n",
-       "962792  190931327244912976  190809470566326468                0\n",
-       "962793  190931327244912976  190849454788987746                0\n",
-       "962794  191018911732647150  189211053665176899                0\n",
-       "962795  191018911732647150  189538543488878795                0 (962796 rows x 3 columns)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "graph_edge_attributes = graph.get_edge_attributes()\n",
     "graph_edge_attributes"
@@ -506,43 +232,32 @@
     "    \n",
     "    # Prepare node data\n",
     "    # Generate node data with blank labels\n",
-    "    # unique_nodes = sorted(set(src).union(dst))\n",
-    "    # node_data = [f\"{node},,\" for node in unique_nodes]\n",
+    "    unique_nodes = sorted(set(src).union(dst))\n",
+    "    node_data = [f\"{node},,\" for node in unique_nodes]\n",
     "    \n",
     "\n",
     "    print(\" Write to CSV\")\n",
     "\n",
     "    # Write to CSV\n",
     "    with open(file_name, \"w\") as f:\n",
-    "        # f.write(\"\\n\".join(edge_data + node_data))\n",
-    "        f.write(\"\\n\".join(edge_data))\n",
+    "        f.write(\"\\n\".join(edge_data + node_data))\n",
+    "        # f.write(\"\\n\".join(edge_data))\n",
     "    print(f\"Graph saved to {file_name}\")\n",
-    "    \n"
+    "    \n",
+    "s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing main graph...\n",
-      "This transfer will use 22 MB .\n",
-      "Prepare node data\n",
-      " Write to CSV\n",
-      "Graph saved to main_graph.csv\n",
-      "Main graph saved to main_graph.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save the main graph to a CSV file\n",
     "print(\"Processing main graph...\")\n",
-    "save_graph_to_csv(graph, \"main_graph.csv\")\n",
-    "print(\"Main graph saved to main_graph.csv\")\n"
+    "save_graph_to_csv(graph, \"main_graph_OL.csv\")\n",
+    "print(\"Main graph saved to main_graph_OL.csv\")\n",
+    "\n"
    ]
   },
   {
@@ -564,42 +279,19 @@
     "    edge_data = [f\"{src[i]}>{dst[i]},{edge_labels[i]}\" for i in range(len(src))]\n",
     "\n",
     "    # # Generate node data with blank labels\n",
-    "    # node_data = [f\"{node},,\" for node in range(len(nodes))]\n",
+    "    node_data = [f\"{node},,\" for node in range(len(nodes))]\n",
     "\n",
     "    # Write to CSV\n",
     "    with open(file_name, \"w\") as f:\n",
-    "        # f.write(\"\\n\".join(edge_data + node_data))\n",
-    "        f.write(\"\\n\".join(edge_data))\n"
+    "        f.write(\"\\n\".join(edge_data + node_data))\n",
+    "        # f.write(\"\\n\".join(edge_data))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing subgraph 0...\n",
-      "Subgraph 0 saved to subgraph_0.csv\n",
-      "Processing subgraph 3...\n",
-      "Subgraph 3 saved to subgraph_3.csv\n",
-      "Processing subgraph 2...\n",
-      "Subgraph 2 saved to subgraph_2.csv\n",
-      "Processing subgraph 7...\n",
-      "Subgraph 7 saved to subgraph_7.csv\n",
-      "Processing subgraph 5...\n",
-      "Subgraph 5 saved to subgraph_5.csv\n",
-      "Processing subgraph 00...\n",
-      "Subgraph 00 saved to subgraph_00.csv\n",
-      "Processing subgraph 01...\n",
-      "Subgraph 01 saved to subgraph_01.csv\n",
-      "Processing subgraph 03...\n",
-      "Subgraph 03 saved to subgraph_03.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key, value in raw_subgraph_data.items():\n",
     "    print(f\"Processing subgraph {key}...\")\n",
@@ -637,34 +329,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building subgraph0...\n",
-      "We found 696460.0 monos inside of the graph\n",
-      "Time taken for VF2-SI on subgraph0: 3.2901 seconds\n",
-      "\n",
-      "Subgraph edge attributes:\n",
-      "   src    dst  connection_type\n",
-      "0    1  10002                0\n",
-      "1    1  10003                0\n",
-      "Subgraph node attributes are empty.\n",
-      "Main graph edge attributes:\n",
-      "This transfer will use 22 MB .\n",
-      "          src              dst  connection_type\n",
-      "0  4721570023      29419008432                0\n",
-      "1  4721570023      34564308247                0\n",
-      "2  4721570023   62325779916524                1\n",
-      "3  4721570023   99268253475632                1\n",
-      "4  4721570023  308599174432198                1\n",
-      "Main graph node attributes are empty.\n",
-      "This transfer will use 22 MB .\n",
-      "Networkx running\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for key,value in raw_subgraph_data.items():\n",
     "    print(f\"Building subgraph{key}...\")\n",
