--- a/arachne/Hemibrain-Threads.ipynb
+++ b/arachne/Hemibrain-Threads.ipynb
@@ -2,43 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arkouda server running with 1L and 128PUs.\n",
-      "Index(['roi', 'weight', 'src', 'dst'], dtype='<U0')\n",
-      "Property graph created with fixed node (lbls2=10, lbls3=True) and edge attributes (rels1=5, rels2=True).\n",
-      "Data loaded now we are loading the subraph....\n",
-      "num_nodes =  21739\n",
-      "num_edges =  3550403\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -57,8 +23,8 @@
     "print(f\"Arkouda server running with {num_locales}L and {num_pus}PUs.\")\n",
     "\n",
     "# Probabilities for node and edge attributes\n",
-    "P_Alpha = 0.73\n",
-    "P_Beta = 0.27\n",
+    "P_Alpha = 0.55\n",
+    "P_Beta = 0.45\n",
     "node_lbl_probs = {\n",
     "    \"lbls2\": [P_Alpha, P_Beta],  # Probabilities for integers 10 and 11\n",
     "    \"lbls3\": [P_Alpha, P_Beta]   # Probabilities for True and False\n",
@@ -104,22 +70,12 @@
     "num_nodes = len(all_nodes)\n",
     "num_edges = len(src_list)\n",
     "\n",
-    "# node_lbls2 = ak.array([10] * num_nodes)  # lbls2 set to 10\n",
-    "# node_lbls3 = ak.array([True] * num_nodes)  # lbls3 set to True\n",
-    "# edge_rels1 = ak.array([5] * num_edges)  # rels1 set to 5\n",
-    "# edge_rels2 = ak.array([True] * num_edges)  # rels2 set to True\n",
+    "node_lbls2 = ak.array([10] * num_nodes)  # lbls2 set to 10\n",
+    "node_lbls3 = ak.array([True] * num_nodes)  # lbls3 set to True\n",
+    "edge_rels1 = ak.array([5] * num_edges)  # rels1 set to 5\n",
+    "edge_rels2 = ak.array([True] * num_edges)  # rels2 set to True\n",
     "\n",
-    "# Randomly generate node attributes\n",
-    "node_lbls2 = ak.where(\n",
-    "        ak.randint(0, 100, num_nodes) < node_lbl_probs[\"lbls2\"][0] * 100, 10, 11\n",
-    ")\n",
-    "node_lbls3 = ak.randint(0, 100, num_nodes) < node_lbl_probs[\"lbls3\"][0] * 100\n",
     "\n",
-    "# Randomly generate edge attributes\n",
-    "edge_rels1 = ak.where(\n",
-    "    ak.randint(0, 100, num_edges) < edge_rel_probs[\"rels1\"][0] * 100, 5, 6\n",
-    ")\n",
-    "edge_rels2 = ak.randint(0, 100, num_edges) < edge_rel_probs[\"rels2\"][0] * 100\n",
     "\n",
     "\n",
     "# Create dataframes\n",
@@ -145,9 +101,9 @@
     "\n",
     "\n",
     "print(\"Data loaded now we are loading the subraph....\")\n",
-    "\n",
     "print(\"num_nodes = \", num_nodes)\n",
-    "print(\"num_edges = \", num_edges)\n"
+    "print(\"num_edges = \", num_edges)\n",
+    "\n"
    ]
   },
   {
@@ -156,46 +112,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# src_list = [1, 0]\n",
-    "# dst_list = [2, 2]\n",
-    "# src_list = [    1,     1]\n",
-    "# dst_list = [10002, 10003]\n",
-    "# src_list = [1, 1, 1, 1, 10002]\n",
-    "# dst_list = [10002, 10003, 10004, 50006, 70008]\n",
+    "# Fixed attributes for subgraph\n",
+    "subgraph_node_ints = ak.array([10, 10, 10])\n",
+    "subgraph_node_bools = ak.array([True, True, True])\n",
+    "subgraph_edge_ints = ak.array([5, 5, 5, 5, 5])\n",
+    "subgraph_edge_bools = ak.array([True, True, True, True, True])\n",
     "\n",
-    "\n",
-    "# src_list = [1, 10002, 20003, 30004, 1, 40005]\n",
-    "# dst_list = [10002, 20003, 30004, 40005, 60007, 80009]\n",
-    "\n",
-    "src_list = [1, 1, 1, 50006, 50006, 50006, 120013, 120013, 120013, 10003, 10004]\n",
-    "dst_list = [10002, 10003, 10004, 60007, 60008, 60009, 130014, 130015, 130016, 60007, 130015]\n",
-    "\n",
-    "\n",
-    "\n",
-    "# src_list = [    1,     1, 40005]\n",
-    "# dst_list = [10002, 10003,     1]\n",
-    "# # src_list = [    1,     1, 40005, 40005, 50008]\n",
-    "# # dst_list = [10002, 10003, 50008,     1, 10003]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Subgraph structure\n",
+    "src_list = [1, 0, 1, 2, 0]\n",
+    "dst_list = [0, 1, 2, 0, 2]\n",
     "src_subgraph = ak.array(src_list)\n",
     "dst_subgraph = ak.array(dst_list)\n",
     "\n",
-    "subgraph_nodes = list(set(src_list) | set(dst_list))\n",
-    "subgraph_nodes.sort()\n",
-    "\n",
-    "# Generate random node and edge attributes for the subgraph\n",
-    "num_subgraph_nodes = len(subgraph_nodes)\n",
-    "num_subgraph_edges = len(src_list)\n",
-    "\n",
-    "subgraph_node_ints = ak.array([11]*num_subgraph_nodes)\n",
-    "subgraph_node_bools = ak.array([False]*num_subgraph_nodes)\n",
-    "subgraph_edge_ints = ak.array([6]*num_subgraph_edges)\n",
-    "subgraph_edge_bools = ak.array([False]*num_subgraph_edges)\n",
-    "\n",
-    "# Create dataframes for subgraph attributes\n",
+    "# Subgraph dataframes\n",
     "edge_df_h = ak.DataFrame({\n",
     "    \"src\": src_subgraph,\n",
     "    \"dst\": dst_subgraph,\n",
@@ -204,15 +133,15 @@
     "})\n",
     "\n",
     "node_df_h = ak.DataFrame({\n",
-    "    \"nodes\": ak.array(subgraph_nodes),\n",
+    "    \"nodes\": ak.array(list(set(src_list + dst_list))),\n",
     "    \"lbls2\": subgraph_node_ints,\n",
     "    \"lbls3\": subgraph_node_bools\n",
     "})\n",
     "\n",
-    "# Create the subgraph with these attributes\n",
-    "subgraph = ar.PropGraph()\n",
-    "subgraph.load_edge_attributes(edge_df_h, source_column=\"src\", destination_column=\"dst\")\n",
-    "subgraph.load_node_attributes(node_df_h, node_column=\"nodes\")\n",
+    "# Create the subgraph\n",
+    "sg = ar.PropGraph()\n",
+    "sg.load_edge_attributes(edge_df_h, source_column=\"src\", destination_column=\"dst\")\n",
+    "sg.load_node_attributes(node_df_h, node_column=\"nodes\")\n",
     "\n",
     "\n",
     "\n",
@@ -227,11 +156,11 @@
    "outputs": [],
    "source": [
     "\"\"\"VF2-SI \"\"\"\n",
-    "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
+    "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, sg, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"si\",\n",
     "                                           reorder_type = \"structural\", return_isos_as = \"vertices\")\n",
     "\n",
-    "print(f\"We found {len(isos_as_vertices[0])/len(subgraph)} monos inside of the graph\")"
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph\")"
    ]
   },
   {
