Nauty integrated and working

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -110,10 +110,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -125,11 +139,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 100000\n",
-      "Number of edges: 4995648\n",
-      "Building property graph with 100000 vertices and 4995648 edges took 2.08 seconds.\n",
+      "Number of nodes: 688\n",
+      "Number of edges: 1079\n",
+      "Building property graph with 688 vertices and 1079 edges took 1.69 seconds.\n",
       "motif_counting started for yeast...\n",
-      "motif_counting for yeast took 412.43 seconds.\n",
+      "motif_counting for yeast took 0.81 seconds.\n",
       "isos =  (array([0 0 0 0]), array([0 0 0 0]))\n"
      ]
     }
@@ -143,7 +157,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n47\", 5555)\n",
+    "ak.connect(\"n46\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -198,8 +212,8 @@
     "    return ak_src, ak_dst, num_nodes\n",
     "\n",
     "# Define the file path\n",
-    "# file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
-    "file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_100_000.txt\"\n",
+    "file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "# file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_100_000.txt\"\n",
     "src, dst, num_nodes = read_graph_to_arkouda(file_path)\n",
     "\n",
     "# Display the results\n",
