ISO check added to the code

--- a/arachne/ISO_matching_small_mesh.ipynb
+++ b/arachne/ISO_matching_small_mesh.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -17,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "671cb378",
    "metadata": {},
    "outputs": [
@@ -36,33 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "0e3a275a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'subgraph_edge_ints' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 19\u001b[0m\n\u001b[1;32m     12\u001b[0m graph_edge_bools \u001b[38;5;241m=\u001b[39m ak\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;28;01mTrue\u001b[39;00m]\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mlen\u001b[39m(src_list))\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Subgraph dataframes\u001b[39;00m\n\u001b[1;32m     16\u001b[0m edge_df_h \u001b[38;5;241m=\u001b[39m ak\u001b[38;5;241m.\u001b[39mDataFrame({\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msrc\u001b[39m\u001b[38;5;124m\"\u001b[39m: src_subgraph,\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdst\u001b[39m\u001b[38;5;124m\"\u001b[39m: dst_subgraph,\n\u001b[0;32m---> 19\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrels1\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43msubgraph_edge_ints\u001b[49m,\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrels2\u001b[39m\u001b[38;5;124m\"\u001b[39m: subgraph_edge_bools\n\u001b[1;32m     21\u001b[0m })\n\u001b[1;32m     23\u001b[0m node_df_h \u001b[38;5;241m=\u001b[39m ak\u001b[38;5;241m.\u001b[39mDataFrame({\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnodes\u001b[39m\u001b[38;5;124m\"\u001b[39m: ak\u001b[38;5;241m.\u001b[39marray(\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(src_list \u001b[38;5;241m+\u001b[39m dst_list))),\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlbls2\u001b[39m\u001b[38;5;124m\"\u001b[39m: subgraph_node_ints,\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlbls3\u001b[39m\u001b[38;5;124m\"\u001b[39m: subgraph_node_bools\n\u001b[1;32m     27\u001b[0m })\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# Create the subgraph\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'subgraph_edge_ints' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "src_list = [1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10]\n",
-    "dst_list = [0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4]\n",
+    "src_list = [1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10,10,10,10,10,11,14,12,13,14,13,10,8,8,8,8,8,9,9,9]\n",
+    "dst_list = [0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4,11,2,3,4,5,12,13,14,1,2,2,4,5,6,7,0,7,14,11]\n",
     "\n",
     "src_graph = ak.array(src_list)\n",
     "dst_graph = ak.array(dst_list)\n",
     "\n",
     "\n",
     "# Fixed attributes for subgraph\n",
-    "graph_node_ints = ak.array([10, 10, 10, 10, 10, 10, 10, 10,10, 10, 10])\n",
-    "graph_node_bools = ak.array([True, True, True, True, True, True, True, True, True, True, True])\n",
+    "graph_node_ints = ak.array([10]*15)\n",
+    "graph_node_bools = ak.array([True]*15)\n",
     "graph_edge_ints = ak.array([5]* len(src_list))\n",
     "graph_edge_bools = ak.array([True]*len(src_list))\n",
     "\n",
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9aa2b97c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ed073422",
    "metadata": {},
    "outputs": [
@@ -140,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 1.0 monos inside of the graph with reordering\n"
+      "We found 19.0 monos inside of the graph with reordering\n"
      ]
     }
    ],
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "3d625f42",
    "metadata": {},
    "outputs": [
@@ -164,16 +167,7 @@
      "output_type": "stream",
      "text": [
       "Found isomorphic subgraphs:\n",
-      "{1: 0, 3: 1, 4: 2, 8: 3}\n",
-      "{2: 0, 4: 1, 5: 2, 9: 3}\n",
-      "{3: 0, 4: 1, 1: 2, 5: 3}\n",
-      "{3: 0, 4: 1, 9: 2, 5: 3}\n",
-      "{4: 0, 1: 1, 3: 2, 0: 3}\n",
-      "{4: 0, 5: 1, 2: 2, 6: 3}\n",
-      "{8: 0, 9: 1, 3: 2, 10: 3}\n",
-      "{10: 0, 4: 1, 9: 2, 1: 3}\n",
-      "{10: 0, 4: 1, 9: 2, 5: 3}\n",
-      "Total number of isomorphisms: 9\n"
+      "Total number of isomorphisms: 19\n"
      ]
     }
    ],
@@ -182,11 +176,14 @@
     "from networkx.algorithms import isomorphism\n",
     "\n",
     "# Define the main graph\n",
-    "src_main = [1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10]\n",
-    "dst_main = [0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4]\n",
+    "# src_main = [1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10]\n",
+    "# dst_main = [0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4]\n",
+    "src_main = [1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10,10,10,10,10,11,14,12,13,14,13,10,8,8,8,8,8,9,9,9]\n",
+    "dst_main = [0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4,11,2,3,4,5,12,13,14,1,2,2,4,5,6,7,0,7,14,11]\n",
     "\n",
-    "labels2_maingraph = [10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10]  # Integer labels for nodes\n",
-    "labels3_maingraph = [True, True, True, True, True, True, True, True, True, True, True]  # Boolean labels for nodes\n",
+    "\n",
+    "labels2_maingraph = [10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10,10,10,10,10]  # Integer labels for nodes\n",
+    "labels3_maingraph = [True, True, True, True, True, True, True, True, True, True, True, True, True, True, True]  # Boolean labels for nodes\n",
     "\n",
     "main_graph = nx.DiGraph()\n",
     "main_graph.add_edges_from(zip(src_main, dst_main))\n",
@@ -232,9 +229,75 @@
     "print(\"Found isomorphic subgraphs:\")\n",
     "for mapping in gm.subgraph_isomorphisms_iter():\n",
     "    isomorphism_count += 1\n",
-    "    print(mapping)\n",
+    "    #print(mapping)\n",
     "\n",
     "print(f\"Total number of isomorphisms: {isomorphism_count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5470629b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found monomorphic subgraphs:\n",
+      "{1: 0, 3: 1, 4: 2, 8: 3}\n",
+      "{2: 0, 4: 1, 5: 2, 1: 3}\n",
+      "{2: 0, 4: 1, 5: 2, 9: 3}\n",
+      "{3: 0, 8: 1, 9: 2, 4: 3}\n",
+      "{3: 0, 8: 1, 9: 2, 0: 3}\n",
+      "{3: 0, 8: 1, 9: 2, 5: 3}\n",
+      "{3: 0, 8: 1, 9: 2, 6: 3}\n",
+      "{3: 0, 8: 1, 9: 2, 7: 3}\n",
+      "{3: 0, 4: 1, 1: 2, 5: 3}\n",
+      "{3: 0, 4: 1, 1: 2, 9: 3}\n",
+      "{3: 0, 4: 1, 9: 2, 1: 3}\n",
+      "{3: 0, 4: 1, 9: 2, 5: 3}\n",
+      "{4: 0, 1: 1, 3: 2, 0: 3}\n",
+      "{4: 0, 5: 1, 2: 2, 6: 3}\n",
+      "{4: 0, 9: 1, 3: 2, 7: 3}\n",
+      "{4: 0, 9: 1, 3: 2, 10: 3}\n",
+      "{4: 0, 9: 1, 3: 2, 11: 3}\n",
+      "{4: 0, 9: 1, 3: 2, 14: 3}\n",
+      "{4: 0, 9: 1, 10: 2, 3: 3}\n",
+      "{4: 0, 9: 1, 10: 2, 7: 3}\n",
+      "{4: 0, 9: 1, 10: 2, 11: 3}\n",
+      "{4: 0, 9: 1, 10: 2, 14: 3}\n",
+      "{5: 0, 2: 1, 4: 2, 1: 3}\n",
+      "{8: 0, 9: 1, 3: 2, 7: 3}\n",
+      "{8: 0, 9: 1, 3: 2, 10: 3}\n",
+      "{8: 0, 9: 1, 3: 2, 11: 3}\n",
+      "{8: 0, 9: 1, 3: 2, 14: 3}\n",
+      "{9: 0, 3: 1, 4: 2, 8: 3}\n",
+      "{9: 0, 3: 1, 8: 2, 4: 3}\n",
+      "{9: 0, 10: 1, 4: 2, 3: 3}\n",
+      "{9: 0, 10: 1, 4: 2, 11: 3}\n",
+      "{9: 0, 10: 1, 4: 2, 2: 3}\n",
+      "{10: 0, 4: 1, 9: 2, 1: 3}\n",
+      "{10: 0, 4: 1, 9: 2, 5: 3}\n",
+      "{12: 0, 13: 1, 14: 2, 2: 3}\n",
+      "{13: 0, 14: 1, 12: 2, 1: 3}\n",
+      "Total number of monomorphisms: 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Find monomorphisms\n",
+    "gm = isomorphism.DiGraphMatcher(main_graph, subgraph, node_match=node_match, edge_match=edge_match)\n",
+    "monomorphism_count = 0\n",
+    "\n",
+    "print(\"Found monomorphic subgraphs:\")\n",
+    "for mapping in gm.subgraph_monomorphisms_iter():\n",
+    "    monomorphism_count += 1\n",
+    "    print(mapping)\n",
+    "\n",
+    "print(f\"Total number of monomorphisms: {monomorphism_count}\")\n"
    ]
   }
  ],
