matchType added to Function def

--- a/arachne/ISO_matching_small_mesh.ipynb
+++ b/arachne/ISO_matching_small_mesh.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0e3a275a",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9aa2b97c",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ed073422",
    "metadata": {},
    "outputs": [
@@ -152,6 +152,31 @@
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
+    "                                           match_type = \"iso\",\n",
+    "                                           reorder_type = \"structural\", return_isos_as = \"vertices\")\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "699ed9e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 36.0 monos inside of the graph with reordering\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"VF2-SI STRUCTURAL + labels + rels\"\"\"\n",
+    "\n",
+    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
+    "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
+    "                                           match_type = \"mono\",\n",
     "                                           reorder_type = \"structural\", return_isos_as = \"vertices\")\n",
     "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
    ]
