--- a/arachne/ISO_matching_small_mesh.ipynb
+++ b/arachne/ISO_matching_small_mesh.ipynb
@@ -56,8 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_list = [1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10,10,10,10,10,11,14,12,13,14,13,10,8,8,8,8,8,9,9,9]\n",
-    "dst_list = [0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4,11,2,3,4,5,12,13,14,1,2,2,4,5,6,7,0,7,14,11]\n",
+    "src_list = [1, 2, 1, 3, 4, 2, 5,6,6,6, 4, 5, 6, 3, 8, 9, 4, 9, 10,10,10,10,10,11,14,12,13,14,13,10,8,8,8,8,8,9,9,9]\n",
+    "dst_list = [0, 1, 3, 4, 1, 4, 2,7,8,10, 5, 6, 7, 8, 9, 3, 9, 10, 4,11,2,3,4,5,12,13,14,1,2,2,4,5,6,7,0,7,14,11]\n",
     "\n",
     "src_graph = ak.array(src_list)\n",
     "dst_graph = ak.array(dst_list)\n",
@@ -143,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 19.0 monos inside of the graph with reordering\n"
+      "We found 18.0 monos inside of the graph with reordering\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We found 36.0 monos inside of the graph with reordering\n"
+      "We found 43.0 monos inside of the graph with reordering\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
      "output_type": "stream",
      "text": [
       "Found isomorphic subgraphs:\n",
-      "Total number of isomorphisms: 19\n"
+      "Total number of isomorphisms: 18\n"
      ]
     }
    ],
@@ -203,8 +203,8 @@
     "# Define the main graph\n",
     "# src_main = [1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10]\n",
     "# dst_main = [0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4]\n",
-    "src_main = [1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10,10,10,10,10,11,14,12,13,14,13,10,8,8,8,8,8,9,9,9]\n",
-    "dst_main = [0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4,11,2,3,4,5,12,13,14,1,2,2,4,5,6,7,0,7,14,11]\n",
+    "src_main = [1, 2, 1, 3, 4, 2, 5,6,6,6, 4, 5, 6, 3, 8, 9, 4, 9, 10,10,10,10,10,11,14,12,13,14,13,10,8,8,8,8,8,9,9,9]\n",
+    "dst_main = [0, 1, 3, 4, 1, 4, 2,7,8,10, 5, 6, 7, 8, 9, 3, 9, 10, 4,11,2,3,4,5,12,13,14,1,2,2,4,5,6,7,0,7,14,11]\n",
     "\n",
     "\n",
     "labels2_maingraph = [10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10,10,10,10,10]  # Integer labels for nodes\n",
@@ -270,43 +270,7 @@
      "output_type": "stream",
      "text": [
       "Found monomorphic subgraphs:\n",
-      "{1: 0, 3: 1, 4: 2, 8: 3}\n",
-      "{2: 0, 4: 1, 5: 2, 1: 3}\n",
-      "{2: 0, 4: 1, 5: 2, 9: 3}\n",
-      "{3: 0, 8: 1, 9: 2, 4: 3}\n",
-      "{3: 0, 8: 1, 9: 2, 0: 3}\n",
-      "{3: 0, 8: 1, 9: 2, 5: 3}\n",
-      "{3: 0, 8: 1, 9: 2, 6: 3}\n",
-      "{3: 0, 8: 1, 9: 2, 7: 3}\n",
-      "{3: 0, 4: 1, 1: 2, 5: 3}\n",
-      "{3: 0, 4: 1, 1: 2, 9: 3}\n",
-      "{3: 0, 4: 1, 9: 2, 1: 3}\n",
-      "{3: 0, 4: 1, 9: 2, 5: 3}\n",
-      "{4: 0, 1: 1, 3: 2, 0: 3}\n",
-      "{4: 0, 5: 1, 2: 2, 6: 3}\n",
-      "{4: 0, 9: 1, 3: 2, 7: 3}\n",
-      "{4: 0, 9: 1, 3: 2, 10: 3}\n",
-      "{4: 0, 9: 1, 3: 2, 11: 3}\n",
-      "{4: 0, 9: 1, 3: 2, 14: 3}\n",
-      "{4: 0, 9: 1, 10: 2, 3: 3}\n",
-      "{4: 0, 9: 1, 10: 2, 7: 3}\n",
-      "{4: 0, 9: 1, 10: 2, 11: 3}\n",
-      "{4: 0, 9: 1, 10: 2, 14: 3}\n",
-      "{5: 0, 2: 1, 4: 2, 1: 3}\n",
-      "{8: 0, 9: 1, 3: 2, 7: 3}\n",
-      "{8: 0, 9: 1, 3: 2, 10: 3}\n",
-      "{8: 0, 9: 1, 3: 2, 11: 3}\n",
-      "{8: 0, 9: 1, 3: 2, 14: 3}\n",
-      "{9: 0, 3: 1, 4: 2, 8: 3}\n",
-      "{9: 0, 3: 1, 8: 2, 4: 3}\n",
-      "{9: 0, 10: 1, 4: 2, 3: 3}\n",
-      "{9: 0, 10: 1, 4: 2, 11: 3}\n",
-      "{9: 0, 10: 1, 4: 2, 2: 3}\n",
-      "{10: 0, 4: 1, 9: 2, 1: 3}\n",
-      "{10: 0, 4: 1, 9: 2, 5: 3}\n",
-      "{12: 0, 13: 1, 14: 2, 2: 3}\n",
-      "{13: 0, 14: 1, 12: 2, 1: 3}\n",
-      "Total number of monomorphisms: 36\n"
+      "Total number of monomorphisms: 43\n"
      ]
     }
    ],
@@ -320,7 +284,7 @@
     "print(\"Found monomorphic subgraphs:\")\n",
     "for mapping in gm.subgraph_monomorphisms_iter():\n",
     "    monomorphism_count += 1\n",
-    "    print(mapping)\n",
+    "    #print(mapping)\n",
     "\n",
     "print(f\"Total number of monomorphisms: {monomorphism_count}\")\n"
    ]
