--- a/arachne/Random-Glasgow.ipynb
+++ b/arachne/Random-Glasgow.ipynb
@@ -135,14 +135,14 @@
     "num_tests = 1\n",
     "\n",
     "# Fixed attributes for subgraph\n",
-    "subgraph_node_ints = ak.array([10, 10, 10, 10])\n",
-    "subgraph_node_bools = ak.array([True, True, True, True])\n",
-    "subgraph_edge_ints = ak.array([5, 5, 5, 5])\n",
-    "subgraph_edge_bools = ak.array([True, True, True, True])\n",
+    "subgraph_node_ints = ak.array([10, 10, 10])\n",
+    "subgraph_node_bools = ak.array([True, True, True])\n",
+    "subgraph_edge_ints = ak.array([5, 5, 5, 5, 5])\n",
+    "subgraph_edge_bools = ak.array([True, True, True, True, True])\n",
     "\n",
     "# Subgraph structure\n",
-    "src_list = [2, 3, 1, 3]\n",
-    "dst_list = [3, 1, 2, 0]\n",
+    "src_list = [0, 1, 0, 2, 1]\n",
+    "dst_list = [1, 0, 2, 0, 2]\n",
     "src_subgraph = ak.array(src_list)\n",
     "dst_subgraph = ak.array(dst_list)\n",
     "\n",
